--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "your-bot-token",
-    "prefix": "au!"
+    "token": "ODY1NTgwNjMxMDQ0MTI4Nzg5.YPGEyA.RzZmUyFxQysVQ3KpbSeCztIIKCg",
+    "prefix": "a!"
 }
